@@ -87,21 +87,10 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <javacArgs>
-            <javacArg>--enable-preview</javacArg>
-          </javacArgs>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-              <source>17</source>
-              <target>17</target>
-              <compilerArgs>--enable-preview</compilerArgs>
-          </configuration>
-
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
